Added flash animation

--- a/modules/transition/demo/transition.html
+++ b/modules/transition/demo/transition.html
@@ -4,12 +4,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width">
 	<title>Rapid - Transition</title>
-	<link href="../../../build/css/rapid.min.css" />
-	
+	<link href="../../../build/css/rapid.min.css" rel="stylesheet" type="text/css" />
+	<link href="../../../css/animations.css" rel="stylesheet" type="text/css" />
 </head>
 <body ng-controller="MainCtrl">
-	<div>
-		<button x-transition="flash" x-target="box" x-time="1">Shake</button>
+	<div style="margin: 50px;">
+		<button x-transition="flash" x-duration="800ms" x-target="box" x-repeat="1">Flash</button>
+		<button x-transition="shake" x-duration="800ms" x-target="box" x-repeat="1">Shake</button>
+		<button x-transition="scale" x-duration="800ms" x-target="box" x-repeat="1">Scale</button>
 		<div id="box" style="width: 100px; height:100px; background: black;"></div>
 	</div>
 	<script src="../../../bower_components/angular/angular.min.js"></script>
